--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Fabio Panetta">
-    <meta name="description" content="">
-    <link rel="icon" href="" type="">
+    <meta name="description" content="Scopri la nuova generazione di console PS4 e PS5, vivi sessioni di gioco immersive con migliaia di grandi giochi di tutti i generi ed esplora i limiti della tua console PlayStation.">
+    <link rel="icon" href="img/play_logo.svg">
     <!-- FONT -->
     <!-- STYLE BOOTSTRAP-->
     <link 
@@ -22,13 +22,15 @@
     >
     <!-- STYLE -->
     <link rel="stylesheet" href="css/style.css">
-    <title>PlayStation</title>
+    <title>Sito ufficiale PlayStation®: Console, giochi, accessori e molto altro</title>
 </head>
 <body>
     <header>
-        <div class="top-header bg-dark text-end">
+        <div class="top-header bg-black text-end">
             <div class="container-fluid">
-                <img src="img/sony_logo.svg" alt="logo" id="sony-logo" class="py-3">
+                <a href="https://www.sony.net/" target="_blank">
+                    <img src="img/sony_logo.svg" alt="logo" id="sony-logo" class="py-3">
+                </a>
             </div>
         </div>
         <div class="bottom-header">
@@ -124,7 +126,7 @@
                             </li>
                         </ul>
                         <div class="button m-1">
-                            <a href="#" class="btn btn-secondary rounded-pill fw-bold m-1">Accedi</a>
+                            <a href="#" class="btn btn-dark rounded-pill fw-bold m-1">Accedi</a>
                         </div>
                         <a class="navbar-brand" href="#">
                             <img src="img/lens.svg" alt="lens-logo" class="w-75">
@@ -189,15 +191,15 @@
                     <span class="text-secondary">Tuffati in nuove possibiltà di gioco complatamente inaspettate</span>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-3 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-6">
                         <h2 class="mb-4">Console PlayStation 5</h2>
                         <span class="text-secondary d-block mb-4">Sperimenta la nuova generazione di incredibili giochi playstation</span>
                         <div class="button-blue d-inline-block m-1">
                             <a href="#" class="btn btn-primary rounded-pill m-1">Maggiori informazioni</a>
                         </div>
                     </div>
-                    <div class="col-12 col-md-9 col-lg-8">
-                        <img src="img/playstation-5-thumb.png" alt="" class="play-5">
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <img src="img/playstation-5-thumb.png" alt="" class="w-75">
                     </div>
                 </div>
                 <div class="row mb-5">
@@ -425,22 +427,22 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-6 col-sm-3 col-lg-2 mb-4">
-                        <a href="#">
+                        <a href="https://twitter.com/PlayStationIT" target="_blank">
                             <img src="img/twitter.jpg" alt="" class="w-100">
                         </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2 mb-4 ">
-                        <a href="#">
+                        <a href="https://www.facebook.com/sonyplaystationitalia" target="_blank">
                             <img src="img/facebook.jpg" alt="" class="w-100">
                         </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2  mb-4 ">
-                        <a href="#">
+                        <a href="https://www.instagram.com/playstationit/" target="_blank">
                             <img src="img/instagram.jpg" alt="" class="w-100">
                         </a>
                     </div>
                     <div class="col-6 col-sm-3 col-lg-2  mb-4">
-                        <a href="#">
+                        <a href="https://www.youtube.com/user/playstationplanet" target="_blank">
                             <img src="img/youtube.png" alt="" class="w-100">
                         </a>
                     </div>
@@ -461,58 +463,67 @@
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/support/" class="text-decoration-none text-white" target="_blank">Supporto</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/privacy-policy/" class="text-decoration-none text-white" target="_blank">Informativa sulla privacy e sui cookie</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/website-terms-of-use/" class="text-decoration-none text-white" target="_blank">Termini di utilizzo del sito Web</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/corporate/playstation-studios/" class="text-decoration-none text-white" target="_blank">PlayStation Studios</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/" class="text-decoration-none text-white" target="_blank">Termini legali</a>
                                 </li>
-                            </ul>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <ul class="text-white list-unstyled">
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/corporate/about-us/" class="text-decoration-none text-white" target="_blank">Chi siamo</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/corporate/playstation-and-the-environment/" class="text-decoration-none text-white" target="_blank">PlayStation e l'ambiente</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/psn-terms-of-service/" class="text-decoration-none text-white" target="_blank">Termini di servizio di PSN</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/playstation-store-cancellation-policy/" class="text-decoration-none text-white" target="_blank">Termini di annullamento del PS Store</a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-decoration-none text-white">Link footer</a>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/health-warning/" class="text-decoration-none text-white" target="_blank">Avvertenze per la salute</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/support/safety/" class="text-decoration-none text-white" target="_blank">Classificazioni per età</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/legal/software-usage-terms/" class="text-decoration-none text-white" target="_blank">Termini d'uso del Software</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/corporate/playstation-careers/" class="text-decoration-none text-white" target="_blank">Lavora con PlayStation</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.playstation.com/it-it/site-map/" class="text-decoration-none text-white" target="_blank">Mappa del sito</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="text-white list-unstyled">
+                                <li class="mb-2">
+                                    <a href="https://www.facebook.com/sonyplaystationitalia" class="text-decoration-none text-white" target="_blank">Facebook</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://twitter.com/PlayStationIT" class="text-decoration-none text-white" target="_blank">Twitter</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.youtube.com/user/playstationplanet" class="text-decoration-none text-white" target="_blank">YouTube</a>
+                                </li>
+                                <li class="mb-2">
+                                    <a href="https://www.instagram.com/playstationit/" class="text-decoration-none text-white" target="_blank">Instagram</a>
                                 </li>
                             </ul>
                         </div>
@@ -524,14 +535,14 @@
                     Wetatite 02021 Sony Interactive Entedainment Europa Limited. Tutti i contenuti, nomi dei giochi, 
                     nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o 
                     materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati.
-                    <a href="#" class="text-white">Maggiori info</a> 
+                    <a href="https://www.playstation.com/it-it/legal/copyright-and-trademark-notice/" class="text-white" target="_blank">Maggiori info</a> 
                    </p>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Scripts  -->
+    <!-- Scripts JavaScripts-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
