--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <main>
         <section id="jumbotron">
             <div class="bg-returnal">
-                <div class="container-xxl p-5">
+                <div class="container">
                     <div class="row align-items-end my-row">
                         <div class="col-12 col-lg-4">
                             <img src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" class="w-75 mb-4">
@@ -159,7 +159,7 @@
         </section>
 
         <section id="card-jumbotron">
-            <div class="container-xxl px-5">
+            <div class="container">
                 <div class="row py-5 justify-content-between ">
                     <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2 border border-2 border-primary rounded-4 ">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
@@ -184,7 +184,7 @@
         </section>
 
         <section id="play5">
-            <div class="container-xxl px-5">
+            <div class="container">
                 <div class="text-center mb-5">
                     <span class="text-primary">PLAY HAS NO LIMITS</span>
                     <h2 class="mb-4">Ecco la PlayStation 5</h2>
@@ -242,17 +242,17 @@
             </div>
         </section>
 
-        <section id="jumbotron-middle-page">
+        <section id="new-games-jumbotron">
             <div class="bg-it-take-two">
-                <div class="container-xxl px-5">
-                    <div class="row py-5">
+                <div class="container">
+                    <div class="row">
                         <div class="col-12 col-lg-4">
-                            <img src="img/it-takes-two-logo.png" alt="" class="w-75 mb-4">
+                            <img src="img/it-takes-two-logo.png" alt="" class="w-75 mb-4 pt-5">
                             <h1 class="text-white mb-4">Un'avventura cooperativa selvaggia ti attende</h1>
                             <p class="text-white mb-4 fs-5">
                                 Trova un amico e partite insieme per l'avventurapiù folle delle vostre vile in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genera. 
                             </p>
-                            <div class="button-red d-inline-block m-1">
+                            <div class="button-red d-inline-block m-1 pb-5">
                                 <a href="#" class="btn btn-danger rounded-pill m-1">Acquista ora</a>
                             </div>
                         </div>
@@ -263,8 +263,8 @@
 
         <section id="nuove-uscite">
             <div class="bg-dark-grey">
-                <div class="container-xxl p-5">
-                    <h2 class="text-white fw-bold mb-3">Nuove uscite</h2>
+                <div class="container">
+                    <h2 class="text-white fw-bold pt-5 mb-3">Nuove uscite</h2>
                     <h4 class="text-white fw-bold mb-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
                     <div class="row">
                         <div class="col-6 col-sm-4 col-lg-2 mb-5 games">
@@ -323,8 +323,8 @@
         </section>
 
         <section id="play4">
-            <div class="container-xxl p-5">
-                <div class="text-center mb-5">
+            <div class="container">
+                <div class="text-center mb-5 pt-5">
                     <h2 class="mb-4">Esplora PlayStation 4</h2>
                     <span class="text-secondary d-block">Giochi incredibili e intrattenimento senza fine.</span>
                     <span class="text-secondary d-block mb-5">Non c'è mai stato un momento migliore per giocare sulla tua PS4. </span>
@@ -360,7 +360,7 @@
 
         <section id="playstation-plus">
             <div class="bg-grey">
-                <div class="container-xxl px-5">
+                <div class="container">
                     <div class="row align-items-center">
                         <div class="col-12 py-5 col-md-6 py-md-0">
                             <img src="img/ps-plus-logo.png" alt="" class="w-50 mb-4">
@@ -380,8 +380,8 @@
         </section>
 
         <section id="sconto">
-            <div class="container-xxl p-5">
-                <div class="text-center mb-5">
+            <div class="container">
+                <div class="text-center mb-5 pt-5">
                     <h2 class="mb-4">Nuovi sconti sul PlayStation Store</h2>
                     <span class="text-secondary d-block mb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto. </span>
                 </div>
@@ -401,7 +401,7 @@
 
         <section id="playstation-now">
             <div class="bg-dark-blue">
-                <div class="container-xxl px-5">
+                <div class="container">
                     <div class="row align-items-center">
                         <div class="col-12 py-5 col-md-6 py-md-0">
                             <img src="img/ps-now-logo-two-column.png" alt="" class="w-50 mb-4">
@@ -421,8 +421,8 @@
         </section>
 
         <section id="social">
-            <div class="container-xxl p-5">
-                <div class="text-center">
+            <div class="container">
+                <div class="text-center pt-4">
                     <h2 class="mb-5">Seguici sui social media</h2>
                 </div>
                 <div class="row justify-content-center">
@@ -452,14 +452,14 @@
     </main>
     
     <footer>
-        <div class="container-xxl p-5">
+        <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-6 mb-5">
+                <div class="col-12 col-lg-6 pt-5">
                     <img src="img/ps-footer.svg" alt="" class="w-25 mb-4 d-block">
                     <i class="bi bi-globe text-white me-2"></i>
                     <span class="text-white fw-blod">Country / Region: Italy</span>
                 </div>
-                <div class="col-12 col-lg-6 mb-5">
+                <div class="col-12 col-lg-6 mb-5 pt-5">
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <ul class="text-white list-unstyled">
